Fix navbar collapse bug

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -54,9 +54,7 @@ body {
 .modal.in {
     display: block;
 }
-.navbar{
-    height: 50px;
-}
+
 ul.comma-list {
     display: inline;
     list-style: none;
